# SearchEngine

./: AVLMap.h  AVLMapTests.cpp  CMakeLists.txt  Documentation.md  HashMap.h  HashMapTests.cpp  Indexer.cpp  Indexer.h  QueryProcessor3.cpp  QueryProcessor3.h  README.md  UserInterface.cpp  UserInterface.h  WordInfo.cpp  WordInfo.h  documentParser.cpp  documentParser.h  documentParserTests.cpp  main.cpp  rapidJSONExample.cpp  stopwords.txt
